--- a/ModdedToVanillaMappings (1).json
+++ b/ModdedToVanillaMappings (1).json
@@ -1,6 +1,10 @@
 {
   "dinoMappings": [
     {
+      "fromClass": "/CravingRhynio/Content/Rhynio_Character_BP_CravingChange",
+      "toClass": "/Game/ASA/Dinos/Ceratosaurus/Dinos/Ceratosaurus_Character_BP_ASA.Ceratosaurus_Character_BP_ASA"
+    },
+    {
       "fromClass": "/AACeratosaurus/Dinos/CeratosaurusAA_Character_BP.CeratosaurusAA_Character_BP",
       "toClass": "/Game/ASA/Dinos/Ceratosaurus/Dinos/Ceratosaurus_Character_BP_ASA.Ceratosaurus_Character_BP_ASA"
     },
