--- a/ModdedToVanillaMappings.json
+++ b/ModdedToVanillaMappings.json
@@ -1,7 +1,7 @@
 {
   "dinoMappings": [
     {
-      "fromClass": "/CravingRhynio/Dinos/Rhynio_Character_BP_CravingChange",
+      "fromClass": "CravingRhynio/Rhynio_Character_BP_CravingChange.Rhynio_Character_BP_CravingChange",
       "toClass": "/Game/Dinos/Rhyniognatha/Rhynio_Character_BP.Rhynio_Character_BP"
     },
     {
